--- a/htmlUI/index.html
+++ b/htmlUI/index.html
@@ -21,34 +21,37 @@
         <![endif]-->
 
         <div class="topBar">
-            <img  />
-            <ul class="topList">
-                <li>r/books</li>
-                <li>r/literature</li>
-                <li>r/porn</li>
-                <li>r/erotica</li>
-            </ul>
-            <div class="userInfo">
-                <p>username | mail | settings | logout</p>
+            <nav class="navDiv">
+                <div class="logoDiv">iCheckBooks</div>
+                <div class="topListDiv">
+                    <ul class="topList">
+                        <li>r/books</li>
+                        <li>r/literature</li>
+                        <li>r/porn</li>
+                        <li>r/erotica</li>
+                    </ul>
+                </div>
+            <div class="userInfoDiv">
+                username | mail | settings | logout
             </div>
+            </nav>
         </div>
 
         <div class="graphicDiv">
 
         </div>
 
-        <div class="contentTitle">
-            <div class="listTitle"></div>
-            <div class="filterDiv">+filter</div>
-        </div>
-
         <div class="contentDiv">
+            <div class="contentTitleDiv">
+                <span class="listTitle">r/Books</span>
+                <span class="filterDiv">+filter</span>
+            </div>
             <div class="itemDiv">
-                <div class="numberDiv"></div>
-                <div class="bookImg"></div>
-                <div class="bookTitle"></div>
-                <div class="bookAuthor"></div>
-                <div class="bookYear"></div>
+                <div class="numberDiv">1</div>
+                <div class="bookImg">img</div>
+                <div class="bookTitle">Freedom of the Hills</div>
+                <div class="bookAuthor">Collaborative</div>
+                <div class="bookYear">2014</div>
                     <div class="actionsDiv">
                         <img class="favoriteButton"  />
                         <img class="commentButton"  />
