setup for backbone

--- a/htmlUI/index.html
+++ b/htmlUI/index.html
@@ -12,7 +12,7 @@
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
-
+        <script data-main="js/application/bootstrap" src="js/libs/require/require.js"></script>
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -27,8 +27,8 @@
                     <ul class="topList">
                         <li>r/books</li>
                         <li>r/literature</li>
-                        <li>r/porn</li>
-                        <li>r/erotica</li>
+                        <li>r/yo</li>
+                        <li>r/sho</li>
                     </ul>
                 </div>
             <div class="userInfoDiv">
@@ -39,6 +39,20 @@
 
         <div class="graphicDiv">
 
+        </div>
+        
+                <div class="loginDiv">
+            <div class="searchDiv"></div>
+            <div class="loginInputs">
+                <p class="usernameTitle">username</p>
+                <p class="passwordTitle">password</p>
+                <div class="username"></div>
+                <div class="password"></div>
+            </div>
+            <div class="checkBoxRemember"><input type="checkbox" /> <span class="checkBoxText">remember me</span></div>
+            <div class="loginButton">Sign In</div>
+            <div class="forgotPassword">Forgot your password?</div>
+            <div class="createButton">Create an Account</div>
         </div>
 
         <div class="contentDiv">
@@ -58,19 +72,33 @@
                         <img class="checkBox"  />
                     </div>
             </div>
+            <div class="itemDiv">
+                <div class="numberDiv">1</div>
+                <div class="bookImg">img</div>
+                <div class="bookTitle">Freedom of the Hills</div>
+                <div class="bookAuthor">Collaborative</div>
+                <div class="bookYear">2014</div>
+                    <div class="actionsDiv">
+                        <img class="favoriteButton"  />
+                        <img class="commentButton"  />
+                        <img class="checkBox"  />
+                    </div>
+            </div>
+            <div class="itemDiv">
+                <div class="numberDiv">1</div>
+                <div class="bookImg">img</div>
+                <div class="bookTitle">Freedom of the Hills</div>
+                <div class="bookAuthor">Collaborative</div>
+                <div class="bookYear">2014</div>
+                    <div class="actionsDiv">
+                        <img class="favoriteButton"  />
+                        <img class="commentButton"  />
+                        <img class="checkBox"  />
+                    </div>
+            </div>
         </div>
 
-        <div class="loginDiv">
-            <div class="searchDiv"></div>
-            <div class="loginInputs">
-                <div class="username"></div>
-                <div class="password"></div>
-            </div>
-            <div class="radioRemember"></div>
-            <div class="loginButton"></div>
-            <div class="forgotPassword"></div>
-            <div class="createButton"></div>
-        </div>
+
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
